<resources>
    <string name="app_name">Emerald Chat Demo</string>
    <string name="enter_name">Enter name:</string>
    <string name="enter_room_name">Enter room name:</string>
    <string name="enter_password">Enter password:</string>
    <string name="enter_user_name">Enter user name:</string>
    <string name="hint_text">Message</string>
    <string name="hint_room_text">Name room</string>
    <string name="hint_room_key">Room key</string>
    <string name="hint_room_password">Room password</string>
    <string name="hint_user_name">User name</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    //Chat room menu
    <string name="Delete_room">Delete room</string>
    <string name="Delete_message">Do you really want to delete the room?</string>
    //Change name dialog
    <string name="enter_name_for_change">Enter name for change:</string>
    //Attach file dialog
    <string name="choose_source">Choose source:</string>
    //Toggle
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    //Navigation Drawer
    <string name="change_name">Change Name</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_">Activity</string>

</resources>
