<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/add_room_dialog_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
        android:id="@+id/enter_room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="24dp"
        android:text="@string/enter_room_name"
        android:textColor="@color/colorUserName"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_below="@+id/enter_room_name">

        <EditText
            android:id="@+id/input_room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="#00000000"
            android:hint="@string/hint_room_text"
            android:inputType="textCapSentences"
            android:textColorHint="@color/colorHint"
            android:textSize="18dp">

            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/input_room_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_room_name"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:hint="@string/hint_room_key"
            android:inputType="textCapSentences"
            android:textColorHint="@color/colorHint"
            android:textSize="18dp">
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/input_layout"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/add_room_yes"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_dialog"
            android:gravity="top"
            android:padding="8dp"
            android:text="@string/ok"
            android:textColor="@color/MainBackground"
            android:textSize="16dp"
            />

        <TextView
            android:id="@+id/add_room_cancel"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/add_room_yes"
            android:background="@drawable/button_dialog"
            android:gravity="top"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/MainBackground"
            android:textSize="16dp"
            />
    </RelativeLayout>
</RelativeLayout>