<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/enter_name_dialog_layout"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
    <TextView
        android:id="@+id/enter_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="24dp"
        android:textColor="@color/colorUserName"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/enter_user_name"/>
    <RelativeLayout
        android:id="@+id/input_name_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/enter_user_name">
        <EditText
            android:id="@+id/enter_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:hint="@string/hint_user_name"
            android:inputType="textCapSentences"
            android:textColorHint="@color/colorHint"
            android:textSize="18dp">
            <requestFocus/>
        </EditText>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/button_name_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/input_name_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/add_name_yes"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:gravity="top"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:textColor="@color/MainBackground"
            android:textSize="16dp"
            android:text="@string/ok"
            android:background="@drawable/button_dialog"
            />
        <TextView
            android:id="@+id/add_name_cancel"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_toLeftOf="@+id/add_name_yes"
            android:gravity="top"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:textColor="@color/MainBackground"
            android:textSize="16dp"
            android:text="@string/cancel"
            android:background="@drawable/button_dialog"
            />
    </RelativeLayout>
</RelativeLayout>