<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/enter_name_change_dialog_layout"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
    <TextView
        android:id="@+id/delete_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:textColor="@color/colorUserName"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/Delete_message"/>
    <RelativeLayout
        android:id="@+id/button_delete_room_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/delete_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/delete_room_button_yes"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:gravity="top"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:textColor="@color/MainBackground"
            android:textSize="16dp"
            android:text="@string/ok"
            android:background="@drawable/button_dialog"
            />
        <TextView
            android:id="@+id/delete_room_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_toLeftOf="@+id/delete_room_button_yes"
            android:gravity="top"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:textColor="@color/MainBackground"
            android:textSize="16dp"
            android:text="@string/cancel"
            android:background="@drawable/button_dialog"
            />
    </RelativeLayout>
</RelativeLayout>